<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.androidbootcamp.noassemblyrequired.MainActivity">

    <Button
        android:text="@string/btnAction2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="116dp"
        android:id="@+id/btnAction2"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/btnAction1"
        android:layout_alignStart="@+id/btnAction1" />

    <Button
        android:text="@string/btnAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAction"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp" />

    <Button
        android:text="@string/btnAction1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAction1"
        android:layout_marginBottom="69dp"
        android:layout_alignBottom="@+id/btnAction2"
        android:layout_alignLeft="@+id/btnAction"
        android:layout_alignStart="@+id/btnAction" />

    <TextView
        android:text="@string/txtstmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textSize="36sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
