<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_patio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.androidbootcamp.noassemblyrequired.Patio">

    <Button
        android:text="@string/btnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="37dp"
        android:id="@+id/btnHome" />

    <Button
        android:text="@string/btnNav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnHome"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="14dp"
        android:layout_marginEnd="14dp"
        android:id="@+id/btnNav" />

    <TextView
        android:text="@string/txtstmt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView"
        android:textSize="36sp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/saw"
        android:id="@+id/imageView2"
        android:layout_marginRight="7dp"
        android:layout_marginEnd="7dp"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/btnNav"
        android:layout_alignEnd="@+id/btnNav" />

</RelativeLayout>
